# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-22 22:53:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-111

    Summary:
      More work on CP tests
    Revision:
      missingh--head--0.5--patch-111


    modified files:
     ChangeLog TODO testsrc/ConfigParser/Maintest.hs


2004-11-22 22:49:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-110

    Summary:
      new tests
    Revision:
      missingh--head--0.5--patch-110


    modified files:
     ChangeLog testsrc/ConfigParser/Maintest.hs


2004-11-22 22:48:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-109

    Summary:
      More tests
    Revision:
      missingh--head--0.5--patch-109


    modified files:
     ChangeLog testsrc/ConfigParser/Maintest.hs


2004-11-22 22:43:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-108

    Summary:
      Adding tests
    Revision:
      missingh--head--0.5--patch-108


    new files:
     testsrc/ConfigParser/Maintest.hs

    modified files:
     ChangeLog testsrc/Tests.hs


2004-11-22 22:06:45 GMT	John Goerzen <jgoerzen@complete.org>	patch-107

    Summary:
      Checkpointing initial configparser development
    Revision:
      missingh--head--0.5--patch-107


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-22 21:35:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-106

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-106


    modified files:
     ChangeLog TODO libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-19 22:10:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-105

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-105


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs


2004-11-19 22:09:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-104

    Summary: